style/styles.css
/* ... */
/* Charleston Illustration on the homepage */
.main_img {
  max-width: 100%;
  max-height: auto;
  Justify-self: center;
}


footer {
  display: grid;
  grid-column: 1 / -1;
  bottom: 0%;
  text-align: center;
  font-weight: 300;
  background-color: #f0f0f0;
  background-size: 100% 100%;
  color: #333333;
  padding-left: 2.3rem;
  padding-right: 2.3rem;
  padding-bottom: 1rem;
}

footer p {
  font-size: 1.6rem;
  line-height: 2.4rem;
}


.footer_title {
  color: #333333;
  padding-bottom: 3rem;
  padding-top: 3rem;
  margin: 0;
}

.footer_list {
  list-style: none;
  display: block;
  padding-left: 0;
  padding-top: 2rem;
  padding-bottom: 2rem;
}

.footer_list li {
  align-items: center;
}

.email {
  display: inline-block;
  width: 3.5rem;
  margin-right: 2rem;
}

.github {
  display: inline-block;
  width: 3.5rem;
  margin-right: 2rem;
}

.linkedin {
  display: inline-block;
  width: 3.5rem;
  align-self: center;
}

small {
  font-family: "Lato", sans-serif;
  font-size: 1.4rem;
  line-height: 2.4rem;
}

.prototype {
  text-align: center;
  margin-bottom: 5rem;
  justify-content: center;
}

.container {
  display: block;
  max-width: 100%;
  margin-right: auto;
  margin-left: auto;
  padding-right: 5%;
  padding-left: 5%;
}


.sidenav {
  flex-basis: 13rem;
  -webkit-box-orient: Vertical;
  -webkit-box-direction: normal;
  flex-direction: column;
}

.container .sidenav_space {
  padding-bottom: 2rem;
}

.sidenav_position {
  position: sticky;
  top: 3rem;
}

.sidenav a {
  padding: 6px 8px 6px 16px;
  text-decoration: none;
  font-size: 2rem;
  font-weight: 300;
  color: #333333;
  display: block;
  font-family: "Lato", sans-serif;
  margin-bottom: 1rem;
  width: auto;
}

.invoicing_img {
  display: block;
  margin-bottom: 2rem;
  max-width: 100%;
  height: auto;
  margin-right: auto;
  margin-left: auto;
}

.ChipIn_img {
  display: block;
  margin-bottom: 2rem;
  max-width: 100%;
  height: auto;
  margin-right: auto;
  margin-left: auto;
}

.moodboard img {
  display: grid;
  grid-column: 1 / -1;
  padding-bottom: 3rem;
  width: 100%;
  max-width: 55rem;
  justify-self: center;
  text-align: center;
}

.view_next .invoicing_link {
  width: 90%;
  max-width: 35rem;
}

.button_text {
  display: grid;
  grid-column: 1 / -1;
  grid-row: 2;
}

.introduction {
  background-color: #F0F0F0;
  justify-items: center;
  text-align: center;
  padding-top: 3rem;
  padding-bottom: 3rem;
}

.introduction_items {
  display: grid;
  grid-column: 1 / -1;
}


.main {
  font-weight: 500;
}

.tools {
  padding-top: 3rem;
  padding-bottom: 3rem;
}

.deliverables {
  padding-bottom: 3rem;
}

.problem {
  display: grid;
  grid-template-columns: 1fr;
  grid-column-start: 2;
  align-content: top;
  padding-top: 4rem;
}

.the-client {
  display: grid;
  grid-column: 1 / -1;
  color: #333333;
  grid-column: 1 / -1;
  width: 100%;
  max-width: 33.7rem;
}

.the-client-three, .the-client-four, .the-client-five {
  display: grid;
  grid-column: 1 / -1;
  color: #333333;
  grid-column: 1 / -1;
  width: 100%;
  max-width: 33.7rem;
  padding-top: 0;
}

.the-client-four {
  padding-top: 3rem;
}

.white {
  color: #333333;
  display: grid;
  grid-row-start: 2;
  padding-top: 0;
  text-align: left;
}

.client_quote {
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: 1fr;
  grid-row-start: 3;
  width: 100%;
}

.sunbelt_title, .sunbelt_desc {
  display: grid;
  grid-column: 1 / -1;
}

.sunbelt_title {
  padding-top: 0;
}

.the-user, .the-user-three, .the-user-four, .the-user-five {
  display: grid;
  grid-column: 1 / -1;
  color: #333333;
  grid-column: 1 / -1;
  align-items: end;
  margin-top: 3rem;
  width: 100%;
  max-width: 33.7rem;
  text-align: left;
}

.solution {
  display: grid;
  grid-column: 1 / -1;
  padding-top: 4rem;
}

.solution p {
  text-align: left;
}

.competitive-analysis p {
  text-align: left;
}

.branding p {
  text-align: left;
}

.discovery {
  display: grid;
  grid-template-columns: 1fr;
  grid-column-start: 1;
  margin-top: 3rem;
}

.discovery_intro, .discovery .findings_list {
  display: grid;
  grid-template-columns: 1fr;
  grid-column: 1 / -1;
}

.white_title {
  color: #333333;
}


.user-surveys {
  background-color: #F0F0F0;
  display: grid;
  justify-items: center;
  text-align: center;
  margin-top: 3rem;
}

.US_background {
  display: grid;
  grid-column: 1/ -1;
  grid-template-columns: 1fr 1fr;
  grid-gap: 2rem;
  justify-items: center;
  justify-self: center;
  text-align: center;
  padding-bottom: 3rem;
  padding-left: 1rem;
  padding-right: 1rem;
}

.category_title {
  display: grid;
  grid-column: 1 / -1;
  margin: 0;
  font-weight: 500;
  text-align: left;
}

.visual_design .category_title {
  justify-self: left;
}


.visual_design .extra_space {
  padding-top: 4rem;
}

.discovery .findings_list .baseline_title {
  padding-top: 5rem;
}

.bold-purple {
  color: #333333;
  font-weight: 400;
  padding-left: 2rem;
  padding-right: 2rem;
  margin-top: 3rem;
  background-color: #f0f0f0;
  margin-top: 3rem;
  text-align: left;
}

.percentage {
  color: #E67688;
  margin-bottom: 0;
}

.section_title {
  margin-bottom: 0;
  margin-top: 1.5rem;
  margin-bottom: 4rem;
}



.discovery .interview_four {
  padding-top: 0;
}

.discovery .interviews_five {
  padding-top: 0;
}

.discovery .findings_list {
  padding-top: 0rem;
}

.finding {
  max-width: 100%;
}

.findings_list h5 {
  padding-bottom: 1rem;
  color: #E67688;
  font-weight: 900;
  font-style:normal;
}


.user-interviews {
  display: grid;
  grid-template-columns: 1fr;
  padding-top: 4rem;
}


.key-takeaway {
  font-family: "Lato", sans-serif;
  font-size: 1.6rem;
  font-weight: 300;
  line-height: 2.4rem;
  margin: 0;
  padding-top: 2rem;
}
/* ... */

